--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>image-flipper</title>
-    <link rel="stylesheet" href="/style.css">
+    <title>image-sliding</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
     <a href="#"><i class="fa fa-chevron-right"></i></a>
 </div>
 </div>
-<script src="/script.js"></script>
+<script src="script.js"></script>
     
 </body>
 </html>
